--- a/src/page/Cart/cart.module.css
+++ b/src/page/Cart/cart.module.css
@@ -1,4 +1,3 @@
-
 h3 {
     margin-top: 50px;
     margin-bottom: 30px;
@@ -21,14 +20,22 @@ h3 {
     margin-top: 14px;
 }
 
-.shop-item {
+.address button {
+    border: 1px solid #9B9B9B;
+    border-radius: 24px;
+    background-color: #fff;
+    color: #9B9B9B;
+    padding: 8px 15px;
+}
+
+.shopItem {
     box-shadow: 0px 0px 8px rgba(115, 115, 115, 0.25);
     border-radius: 4px;
     padding: 30px;
     margin-top: 14px;
 }
 
-.shop-item img {
+.shopItem img {
     width: 103px;
     height: 69px;
     border-radius: 8px;
