--- a/src/page/MyBag/mybag.module.css
+++ b/src/page/MyBag/mybag.module.css
@@ -1,8 +1,8 @@
-.form-check{
-    padding-top: 10px;
-    height: 126px;
+.formCheck{
+    padding: 25px 35px;
     box-shadow: 0px 0px 8px rgba(115, 115, 115, 0.25);
     border-radius: 4px;
+    margin-bottom: 20px;
 }
 
 .total{
@@ -12,15 +12,21 @@
     border-radius: 4px;
 }
 
-.form-check img{
+.formCheck input[checkbox] {
+    accent-color: #DB3022;
+}
+
+.formCheck img{
     width: 103px;
     height: 69px;
+    margin-right: 10px;
 }
 
 .summary {
-    height: 180px;
     box-shadow: 0px 0px 8px rgba(115, 115, 115, 0.25);
     border-radius: 4px;
+    padding: 15px;
+    gap: 5px;
 }
 
 .summary button {
